--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
             <div class="destination" id="belize">
                 <h2>Belize</h2>
             </div>
+            <div class="destination" id="peru">
+                <h2>Peru</h2>
+            </div>
 
             <div class="destination" id="barcelona">
                 <h2>Barcelona</h2>
+            </div>
+            <div class="destination" id="germany">
+                <h2>Germany</h2>
             </div>
         </div>
     </div>
